tests/syntax_errors/missing_brace.c

int test() {
    int x;
    x = 5;
    return x;
